--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,6 +1,3 @@
 GenesisDB:
   Neos:
-    GenesisDB:
-      apiUrl: 'http://172.17.0.1:8080'
-      apiVersion: 'v1'
-      authToken: 'secret'
+    GenesisDB: []
